--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -110,5 +110,6 @@
     <color name="primer_bank_selection_divider">#DBDBDB</color>
     <color name="primer_bank_selection_placeholder_color">#E5E5EA</color>
     <color name="primer_bank_selection_search_background">#08242A2F</color>
+    <color name="primer_pay_button_background">#007AFF</color>
 
 </resources>
