--- a/primer-sdk-android/src/main/res/layout/layout_billing_address_form.xml
+++ b/primer-sdk-android/src/main/res/layout/layout_billing_address_form.xml
@@ -4,33 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:theme="@style/Theme.AppCompat.PrimerUniversalCheckout">
 
     <TextView
         android:id="@+id/tvTitleBillingAddress"
-        style="@style/Primer.Text.SubTitle"
+        style="@style/Primer.FormInput.SubTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_card_form_billing_address" />
+        android:layout_marginBottom="@dimen/primer_input_spacing_vert"
+        android:text="@string/title_card_form_billing_address"
+        tools:textColor="@android:color/black" />
 
     <io.primer.android.ui.components.TextInputWidget
         android:id="@+id/card_form_country_code"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginBottom="@dimen/primer_input_spacing_vert"
         android:layout_weight="1"
         android:hint="@string/address_country_code"
+        app:endIconDrawable="@drawable/ic_input_drop_down"
+        app:endIconMode="dropdown_menu"
+        app:endIconTint="@android:color/black"
         app:errorEnabled="false"
-        app:errorIconDrawable="@null">
+        app:errorIconDrawable="@null"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/card_form_country_code_input"
+            style="@style/Primer.FormInput.Outbox.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapWords"
-            android:maxLines="1" />
+            android:maxLines="1"
+            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
+            tools:text="Hello"
+            tools:textColor="@android:color/black" />
 
     </io.primer.android.ui.components.TextInputWidget>
 
@@ -41,7 +51,7 @@
 
         <io.primer.android.ui.components.TextInputWidget
             android:id="@+id/card_form_first_name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Primer.FormInput.Outbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -49,20 +59,25 @@
             android:layout_weight="1"
             android:hint="@string/first_name"
             app:errorEnabled="false"
-            app:errorIconDrawable="@null">
+            app:errorIconDrawable="@null"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/card_form_first_name_input"
+                style="@style/Primer.FormInput.Outbox.Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:maxLines="1" />
+                android:maxLines="1"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
+                tools:text="Tester"
+                tools:textColor="@android:color/black" />
 
         </io.primer.android.ui.components.TextInputWidget>
 
         <io.primer.android.ui.components.TextInputWidget
             android:id="@+id/card_form_last_name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Primer.FormInput.Outbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -74,10 +89,14 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/card_form_last_name_input"
+                style="@style/Primer.FormInput.Outbox.Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:maxLines="1" />
+                android:maxLines="1"
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
+                tools:text="Tester"
+                tools:textColor="@android:color/black" />
 
         </io.primer.android.ui.components.TextInputWidget>
 
@@ -85,7 +104,7 @@
 
     <io.primer.android.ui.components.TextInputWidget
         android:id="@+id/card_form_address_line1"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Primer.FormInput.Outbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
@@ -97,16 +116,18 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/card_form_address_line1_input"
+            style="@style/Primer.FormInput.Outbox.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
-            android:maxLines="1" />
+            android:maxLines="1"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     </io.primer.android.ui.components.TextInputWidget>
 
     <io.primer.android.ui.components.TextInputWidget
         android:id="@+id/card_form_address_line2"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Primer.FormInput.Outbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
@@ -118,10 +139,12 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/card_form_address_line2_input"
+            style="@style/Primer.FormInput.Outbox.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
-            android:maxLines="1" />
+            android:maxLines="1"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </io.primer.android.ui.components.TextInputWidget>
 
@@ -132,7 +155,7 @@
 
         <io.primer.android.ui.components.TextInputWidget
             android:id="@+id/card_form_postal_code"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Primer.FormInput.Outbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -146,17 +169,19 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/card_form_postal_code_input"
+                style="@style/Primer.FormInput.Outbox.Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPostalAddress"
                 android:maxLength="11"
-                android:maxLines="1" />
+                android:maxLines="1"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         </io.primer.android.ui.components.TextInputWidget>
 
         <io.primer.android.ui.components.TextInputWidget
             android:id="@+id/card_form_city"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Primer.FormInput.Outbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -168,10 +193,12 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/card_form_city_input"
+                style="@style/Primer.FormInput.Outbox.Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:maxLines="1" />
+                android:maxLines="1"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         </io.primer.android.ui.components.TextInputWidget>
 
@@ -179,7 +206,7 @@
 
     <io.primer.android.ui.components.TextInputWidget
         android:id="@+id/card_form_region"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Primer.FormInput.Outbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
@@ -191,10 +218,12 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/card_form_region_input"
+            style="@style/Primer.FormInput.Outbox.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
-            android:maxLines="1" />
+            android:maxLines="1"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     </io.primer.android.ui.components.TextInputWidget>
 
