[DEX-1819] Resolve comments for themes and analytics event name

--- a/primer-sdk-android/src/main/res/layout/fragment_dummy_result_selector.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_dummy_result_selector.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/go_back_description"
-        android:padding="16dp"
+        android:paddingTop="@dimen/large_vertical_margin"
+        android:paddingEnd="@dimen/large_vertical_margin"
+        android:paddingBottom="@dimen/large_vertical_margin"
         android:src="@drawable/icon_go_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,11 +38,9 @@
         style="@style/Primer.Text.Small"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/dummy_apm_sandbox_description"
-        android:textColor="#75757B"
+        android:text="@string/primer_test_header_description"
+        android:textColor="@color/primer_dummy_apm_text_color_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_dummy_result_back"
@@ -50,9 +50,7 @@
         android:id="@+id/rg_response_type"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="@dimen/xl_vertical_margin"
         android:checkedButton="@id/rb_authorized"
         android:divider="@drawable/divider"
         android:orientation="vertical"
@@ -92,10 +90,8 @@
         android:id="@+id/btnPay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="@dimen/xl_vertical_margin"
+        android:layout_marginBottom="@dimen/xxl_vertical_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
