--- a/primer-sdk-android/src/main/res/drawable-night/selector_dummy_radio_button.xml
+++ b/primer-sdk-android/src/main/res/drawable-night/selector_dummy_radio_button.xml
@@ -5,7 +5,7 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <stroke android:width="1dp" android:color="#007AFF" />
+                    <stroke android:width="1dp" android:color="@color/primer_dummy_apm_checked_border" />
                     <corners android:radius="4dp" />
                 </shape>
             </item>
