--- a/primer-sdk-android/src/main/res/values/styles.xml
+++ b/primer-sdk-android/src/main/res/values/styles.xml
@@ -245,7 +245,7 @@
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/roboto_regular</item>
         <item name="android:textColor">@color/primer_default_text</item>
-        <item name="android:minHeight">48dp</item>
+        <item name="android:minHeight">@dimen/primer_decision_radio_button_height</item>
         <item name="android:padding">12dp</item>
         <item name="android:paddingHorizontal" tools:targetApi="o">12dp</item>
         <item name="android:drawablePadding">12dp</item>
