[DEX-1978] Implement poli via rapyd processor

--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
     <color name="iterac">#FEB92B</color>
     <color name="paytrail">#E50C96</color>
     <color name="payshop">#EE3424</color>
+    <color name="poli">#2F4398</color>
 
     <!--  PRIMER THEME  -->
     <!--  override these values for custom theming  -->
