--- a/example/src/main/res/layout/fragment_first.xml
+++ b/example/src/main/res/layout/fragment_first.xml
@@ -110,39 +110,13 @@
                 android:layout_marginTop="12dp"
                 android:text="@string/environment" />
 
-            <RadioGroup
-                android:id="@+id/rgEnvGroup"
+            <Spinner
+                android:id="@+id/dropDownEnvironment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:checkedButton="@id/rbDev"
-                android:orientation="vertical"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <RadioButton
-                    android:id="@+id/rbProduction"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/env_production" />
-
-                <RadioButton
-                    android:id="@+id/rbStaging"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/env_staging" />
-
-                <RadioButton
-                    android:id="@+id/rbDev"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/env_dev" />
-
-                <RadioButton
-                    android:id="@+id/rbSandbox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/env_sandbox" />
-            </RadioGroup>
+                android:layout_marginHorizontal="10dp"
+                tools:listitem="@android:layout/simple_spinner_dropdown_item"
+                android:layout_marginVertical="10dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/apikeyTextFieldLayout"
