--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -34,10 +34,12 @@
     <dimen name="large_padding">16dp</dimen>
 
     <dimen name="medium_vertical_margin">4dp</dimen>
+    <dimen name="medium_vertical_margin2">8dp</dimen>
     <dimen name="x_medium_vertical_margin">12dp</dimen>
     <dimen name="large_vertical_margin">16dp</dimen>
     <dimen name="xl_vertical_margin">24dp</dimen>
     <dimen name="xxl_vertical_margin">28dp</dimen>
+    <dimen name="xxxl_vertical_margin">32dp</dimen>
 
     <dimen name="elevation_selected">5dp</dimen>
     <dimen name="elevation_unselected">0dp</dimen>
