--- a/primer-sdk-android/src/main/res/layout/payment_method_button_promptpay.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_button_promptpay.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <io.primer.android.ui.components.ButtonDefaultLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fast_preview_button"
+    android:id="@+id/promptpay_preview_button"
     android:layout_width="match_parent"
     android:layout_height="@dimen/primer_payment_method_preview_button_height"
     android:background="@drawable/button_light"
+    android:backgroundTint="@color/promptpay"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center"
@@ -14,7 +15,7 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/fast_bank_transfer"
-        android:src="@drawable/ic_logo_fast_light" />
+        android:contentDescription="@string/promptpay"
+        android:src="@drawable/ic_logo_promptpay_dark" />
 
 </io.primer.android.ui.components.ButtonDefaultLayout>
