--- a/example/src/main/res/layout/fragment_third.xml
+++ b/example/src/main/res/layout/fragment_third.xml
@@ -24,7 +24,10 @@
                 android:id="@+id/parentView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:layout_margin="@dimen/xxl_vertical_margin"
+                android:divider="@drawable/divider_vertical_space"
+                android:orientation="vertical"
+                android:showDividers="middle" />
 
             <LinearLayout
                 android:id="@+id/pmView"
